The final Ascend commit.

--- a/Ascend.csproj
+++ b/Ascend.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="HighScore.cs" />
     <Compile Include="HighScoreTest.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -78,6 +79,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Platform.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
